# lacrei-saude-api

./: .env.example  .gitignore  README.md  docker-compose.prod.yaml  docker-compose.yaml  dockerfile  pyproject.toml
.github/workflows/: ci.yml
api/: models.py  serializers.py  services.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py
setup/: settings.py  urls.py
