[project]
name = "lacrei-saude-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Fernando Lanfranchi",email = "felanfranchi@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.2,<7.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-filter (>=25.2,<26.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "dj-database-url (>=3.1.2,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "ruff (>=0.15.2,<0.16.0)"
]

[tool.ruff]
line-length = 120
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    ".venv",
    "venv"
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I"
]